# vacancies_hh

./: README.md  main.py  pyproject.toml  trash.py
src/: classes.py  functions.py  main.py  menu.py
tests/: test_classes.py  test_functions.py
