[tool.poetry]
name = "vacancies-hh"
version = "0.1.0"
description = ""
authors = ["Glushkov Alex <avgl@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
